Another safety commit - probably a bad project file for the UWP application.

--- a/Brigade/Brigade/Views/MainView.xaml
+++ b/Brigade/Brigade/Views/MainView.xaml
@@ -5,7 +5,9 @@
 			 Title="{Binding Title}">
 	<StackLayout>
 		<ScrollView>
-
+			<ListView BindingContext="MenuItems">
+				
+			</ListView>
 		</ScrollView>
 	</StackLayout>
 </ContentPage>
